# ESWposedetection

./: .gitignore  README.md  settings.gradle.kts
App/: README.md
App/app/: build.gradle.kts
App/app/src/main/cpp/: CMakeLists.txt
Application/app/: build.gradle.kts
Model/: .gitignore  README.md  create_dataset.py  posture_analyse.py  posture_corrector.py  posture_dataset.csv  posture_dataset_final.csv  posture_model_final.pkl  requirements.txt  run_isolation_forest.py  run_live_model.py  train_model.py
Model/keypoints_to_analyze/: keypoints_20250909_160353.json  keypoints_20250927_010015.json  keypoints_20250927_010022.json  keypoints_20250927_010025.json  keypoints_20250927_010026.json  keypoints_20250927_010034.json  keypoints_20250927_010035.json  keypoints_20250927_010046.json  keypoints_20250927_010047.json
Model/webcam_captures/test/: keypoints_20250927_010014.json  keypoints_20250927_010021.json  keypoints_20250927_010052.json  keypoints_20250927_010053.json
Model/webcam_captures/twist_left/: keypoints_20250927_001257.json  keypoints_20250927_001258.json  keypoints_20250927_001259.json  keypoints_20250927_001300.json  keypoints_20250927_001301.json  keypoints_20250927_001302.json  keypoints_20250927_001304.json  keypoints_20250927_001305.json  keypoints_20250927_001307.json  keypoints_20250927_001308.json  keypoints_20250927_002139.json  keypoints_20250927_002140.json  keypoints_20250927_002141.json  keypoints_20250927_002142.json  keypoints_20250927_002143.json  (+40 more)
app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
(+859 files in other folders)
